--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,5 +4,8 @@
     <dimen name="progress_size">30dp</dimen>
     <dimen name="error_view_text_size">14sp</dimen>
     <dimen name="base_padding">16dp</dimen>
+    <dimen name="small_padding">8dp</dimen>
+    <dimen name="holder_tier_text_size">16sp</dimen>
+    <dimen name="big_padding">32dp</dimen>
 
 </resources>
